--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ navVersion = "2.8.7"
 kotlinxSerializationJson = "1.8.0"
 fuel = "2.3.1"
 gson = "2.12.1"
+window = "1.4.0-beta02"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -35,6 +36,8 @@ fuel-android = { group = "com.github.kittinunf.fuel", name = "fuel-android", ver
 fuel-coroutines = { group = "com.github.kittinunf.fuel", name = "fuel-coroutines", version.ref = "fuel" }
 fuel-gson = { group = "com.github.kittinunf.fuel", name = "fuel-gson", version.ref = "fuel" }
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
+androidx-window = { group = "androidx.window", name = "window", version.ref = "window" }
+androidx-window-core = { group = "androidx.window", name = "window-core", version.ref = "window" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
