--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,8 @@ kotlinxSerializationJson = "1.8.0"
 fuel = "2.3.1"
 gson = "2.12.1"
 window = "1.4.0-beta02"
-ksp = "2.0.21-1.0.27"
+ksp = "2.1.10-1.0.31"
+room = "2.6.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -39,6 +40,9 @@ fuel-gson = { group = "com.github.kittinunf.fuel", name = "fuel-gson", version.r
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 androidx-window = { group = "androidx.window", name = "window", version.ref = "window" }
 androidx-window-core = { group = "androidx.window", name = "window-core", version.ref = "window" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
