--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,16 +7,16 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
-composeBom = "2025.02.00"
-navVersion = "2.8.8"
+composeBom = "2025.03.00"
+navVersion = "2.8.9"
 kotlinxSerializationJson = "1.8.0"
 fuel = "2.3.1"
 gson = "2.12.1"
-window = "1.4.0-beta02"
+window = "1.4.0-rc01"
 ksp = "2.1.10-1.0.31"
 room = "2.6.1"
 hilt = "2.53.1"
-lifecycleViewmodelCompose = "2.9.0-alpha11"
+lifecycleViewmodelCompose = "2.9.0-alpha12"
 hiltNavigationCompose = "1.2.0"
 
 [libraries]
