--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,10 @@
+#
+# Copyright (c) 2025 Maximilian Schwärzler
+#
+# This source code is licensed under the MIT license found in the
+# LICENSE file in the root directory of this source tree.
+#
+
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
