--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,10 @@
+#
+# Copyright (c) 2025 Maximilian Schwärzler
+#
+# This source code is licensed under the MIT license found in the
+# LICENSE file in the root directory of this source tree.
+#
+
 #Wed Feb 19 20:23:21 CET 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
