--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,25 @@
 [versions]
 agp = "8.12.1"
-kotlin = "2.1.10"
-coreKtx = "1.15.0"
+kotlin = "2.2.10"
+coreKtx = "1.17.0"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.7"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
+lifecycleRuntimeKtx = "2.9.2"
 activityCompose = "1.10.1"
-composeBom = "2025.03.01"
-navVersion = "2.8.9"
-kotlinxSerializationJson = "1.8.0"
-gson = "2.12.1"
-window = "1.4.0-rc01"
+composeBom = "2025.08.00"
+navVersion = "2.9.3"
+kotlinxSerializationJson = "1.9.0"
+gson = "2.13.1"
+window = "1.4.0"
 ksp = "2.1.10-1.0.31"
-room = "2.6.1"
-hilt = "2.56.1"
-lifecycleViewmodelCompose = "2.9.0-alpha13"
+room = "2.7.2"
+hilt = "2.57.1"
+lifecycleViewmodelCompose = "2.9.2"
 hiltNavigationCompose = "1.2.0"
-datastorePreferences = "1.1.4"
-coil = "3.1.0"
-retrofit = "2.11.0"
+datastorePreferences = "1.1.7"
+coil = "3.3.0"
+retrofit = "3.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -61,4 +61,5 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 
